Fixed profile on mobile

--- a/src/sass/helpers/_responsive.scss
+++ b/src/sass/helpers/_responsive.scss
@@ -23,7 +23,7 @@
         }
 
         .profile-link {
-            top: 24px;
+            top: 22px;
             right: 10px;
             font-size: 0;
             line-height: 0;
@@ -31,6 +31,13 @@
 
             .circle {
                 margin: 0;
+            }
+
+            .question {
+                font-size: 20px;
+                line-height: 20px;
+                width: 20px;
+                display: block;
             }
         }
     }
@@ -160,6 +167,40 @@
 
         #col-right {
             left: 0;
+        }
+    }
+
+    #profile {
+        .profile-form {
+            position: fixed;
+            right: -100%;
+            width: 100%;
+            max-width: 100%;
+
+            .title {
+                font-size: 20px;
+                height: 40px;
+                line-height: 40px;
+
+                .close {
+                    line-height: 20px;
+                    height: 20px;
+                    margin-top: 10px;
+                }
+            }
+
+            .inner {
+                top: 40px;
+                margin-left: 0;
+            }
+
+            legend {
+                line-height: 32px;
+            }
+
+            label {
+                margin-top: 10px;
+            }
         }
     }
 
