--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -114,7 +114,6 @@ header {
     padding: 8px 16px;
     background-color: $game-background;
     border: none;
-    //border: 3px solid #ffffff;
     border-radius: 40px;
 
     &,&:visited {
@@ -129,6 +128,7 @@ header {
       margin-left: -8px;
       margin-right: 8px;
       background-color: #ffffff;
+      vertical-align: top;
     }
   }
 }
